CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(MatrixModelsTop CXX)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS ON)
SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/ROSS")
ADD_COMPILE_DEFINITIONS(ROSS_TIME_CLASS=TRUE)
SET_TARGET_PROPERTIES(ROSS PROPERTIES LINKER_LANGUAGE CXX)

INCLUDE_DIRECTORIES(${ROSS_SOURCE_DIR} ${ROSS_BINARY_DIR})
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/matrix")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/matrix-cancel")
